<resources>
    <string name="app_name">AbhaRepoLPL_UI</string>
    <string name="abha_creation_text">ABHA ID Creation</string>
    <string name="steps">3 Simple Steps to create ABHA ID Card</string>
    <string name="create_id_card">CREATE ABHA HEALTH ID CARD</string>
    <string name="create_abha_id">CREATE ABHA ID</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="continue1">CONTINUE</string>
    <string name="verify_number">Verify with your mobile number</string>
    <string name="_91">+91</string>
    <string name="otp">OTP</string>
    <string name="otp_verify">We have sent you OTP for verification to</string>
    <string name="number">+91 9990174891</string>
    <string name="_00_45">00:45</string>
    <string name="resend">Resend</string>
    <string name="health_card_created">ABHA Health Card Created Successfully</string>
    <string name="submit_abha_address">Thank you for submitting the details. Your ABHA Address is</string>
    <string name="created_successfully">created successfully.</string>
    <string name="abha_id">ABHA ID</string>
    <string name="enter_adhar">Enter Aadhaar Number to create ABHA ID</string>
    <string name="otp_will_be_sent">OTP will be sent to mobile number linked</string>
    <string name="xxxx">xxxx</string>
    <string name="adhar_verification">Aadhaar Card verification</string>
    <string name="confirm_adhaar_details">Confirm your Aadhaar Details</string>
    <string name="proceed">PROCEED</string>
    <string name="verify_adhar_textline">Verify your Aadhaar details as these details will be updated to your LPL Patient Profile</string>
    <string name="adhar_no">xxxx xxxx xxxx</string>
    <string name="create_abha_address">Create your ABHA Address</string>
    <string name="abdm">\@abdm</string>
    <string name="suggested">Suggested:</string>
    <string name="vaishnavi_loke">Vaishnavi Loke</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="_09_12_1996">09-12-1996</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="verify">VERIFY</string>
    <string name="vashnaviloke_abdm">Vashnaviloke@abdm</string>
    <string name="enter_address">Enter your Address</string>
    <string name="linkmobileno">Link Mobile Number</string>
    <string name="verifyotp">OTP Verification</string>
    <string name="unknownerror">Unknown error occurred.</string>
    <string name="otpresent">OTP resent.</string>
    <string name="entervalidotp">Enter valid OTP.</string>
</resources>