<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:clickable="true"
                android:paddingStart="10dp"
                android:src="@drawable/arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/pt_sans_bold"
                android:text="@string/abha_id"
                android:textColor="@color/dark_blue"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/pt_sans_bold"
                android:text="@string/health_card_created"
                android:textColor="#014899"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/ivCard"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/pt_sans_regular"
                android:text="@string/submit_abha_address"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/pt_sans_regular"
                    android:text="@string/created_successfully"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvABHAAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/pt_sans_bold"
                    android:text=""
                    android:textColor="@color/text_blue"
                    android:textSize="14sp" />
            </LinearLayout>

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/gifImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/gif_image_1" />

        </LinearLayout>

        <TextView
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/btn_blu_bg1"
            android:fontFamily="@font/pt_sans_bold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/continue1"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <RelativeLayout
            android:id="@+id/rlProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:indeterminateTint="@color/theme_color"
                android:indeterminateTintMode="src_atop" />
        </RelativeLayout>

    </RelativeLayout>
</layout>