<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ConfirmAdharActivity">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:paddingStart="10dp"
                android:src="@drawable/arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/pt_sans_bold"
                android:text="@string/adhar_verification"
                android:textColor="@color/dark_blue"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="-3dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/pt_sans_bold"
                android:text="@string/confirm_adhaar_details"
                android:textColor="@color/dark_blue"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/outline_bg2"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp">

                <ImageView
                    android:id="@+id/ivhead"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/adhar_head" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivAdharImage"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="5dp"
                        android:layout_below="@+id/ivhead"
                        android:src="@drawable/profileicon" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ivhead"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_toRightOf="@id/ivAdharImage"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/pt_sans_regular"
                                android:text="@string/name"
                                android:textColor="#7f7f7f"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tvName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:fontFamily="@font/pt_sans_regular"
                                android:text=""
                                android:textColor="@color/black"
                                android:textSize="14sp" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/pt_sans_regular"
                                android:text="@string/date_of_birth"
                                android:textColor="#7f7f7f"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tvDOB"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:fontFamily="@font/pt_sans_regular"
                                android:text=""
                                android:textColor="@color/black"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/pt_sans_regular"
                                android:text="@string/gender"
                                android:textColor="#7f7f7f"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tvGender"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:fontFamily="@font/pt_sans_regular"
                                android:text=""
                                android:textColor="@color/black"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvAdhar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/pt_sans_bold"
                            android:text="@string/adhar_no"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/pt_sans_regular"
                android:text="@string/verify_adhar_textline"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/btnProceed"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/btn_blu_bg1"
            android:fontFamily="@font/pt_sans_bold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/proceed"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <RelativeLayout
            android:id="@+id/rlProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:indeterminateTint="@color/theme_color"
                android:indeterminateTintMode="src_atop" />
        </RelativeLayout>

    </RelativeLayout>
</layout>