<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".EnterNoActivity">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:paddingStart="10dp"
                android:src="@drawable/arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/pt_sans_bold"
                android:text="@string/linkmobileno"
                android:textColor="@color/dark_blue"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:src="@drawable/image_7" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pt_sans_bold"
                    android:text="@string/mobile_number"
                    android:textColor="@color/dark_blue"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/pt_sans_regular"
                    android:text="@string/verify_number"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="20dp"
                android:background="@drawable/et_outline_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:padding="5dp"
                    android:src="@drawable/image_10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/pt_sans_bold"
                    android:text="@string/_91"
                    android:textColor="@color/dark_blue"
                    android:textSize="14sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:background="#b5b5b5
" />

                <EditText
                    android:id="@+id/etMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_blue"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/btn_gray_bg2"
                android:fontFamily="@font/pt_sans_bold"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/continue1"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/rlProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progress"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/theme_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>

    </RelativeLayout>
</layout>